fix: uncomment scrollbar hiding styles for better cross-browser compatibility

--- a/src/globals.css
+++ b/src/globals.css
@@ -116,14 +116,14 @@ body.noScrolllock {
 /* body scrolllock */
 
 /* hide scrollbar */
-/* .no-scrollbar::-webkit-scrollbar { */
-/* display: none; Chrome, Safari, and Opera */
-/* } */
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
 
-/* .no-scrollbar { */
-/* -ms-overflow-style: none; IE and Edge */
-/* scrollbar-width: none; Firefox */
-/* } */
+.no-scrollbar {
+  -ms-overflow-style: none; /*  IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 .no-select {
   -webkit-user-select: none; /* Safari, Chrome, Opera */
   -moz-user-select: none; /* Firefox */
